Attempt to fix wrapping nav buttons in mobile Chrome

--- a/help/css/grist.css
+++ b/help/css/grist.css
@@ -92,6 +92,10 @@
   padding-top: 48px;
 }
 
+.wm-vcentered > .btn-sm {
+  min-width: 33px;
+}
+
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   font-size: 15px;
